# SOWLv2

./: .gitignore  .pylintrc  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  run_tests.py  setup.py
.claude/: settings.local.json
.github/workflows/: pylint.yml  pyre.yml  pysa.yml  tests.yml
config/: config_example.yaml
docs/: OPTIMIZATION_GUIDE.md  architecture.md  temporal_video_tracking.md  vjepa2_integration.md
examples/: optimized_inference.py
notebooks/: SOWLv2_demo.ipynb  SOWLv2_jupiter.ipynb  sowlv2.py
sowlv2/: cli.py  frame_pipeline.py  image_pipeline.py  owl.py  pipeline.py  pipeline_utils.py  sam2_wrapper.py  video_pipeline.py  video_utils.py
sowlv2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sowlv2/data/: config.py
sowlv2/models/: __init__.py  owl.py  sam2_wrapper.py
sowlv2/optimizations/: __init__.py  batch_optimizer.py  gpu_optimizations.py  model_cache.py  optimized_pipeline.py  parallel_processor.py  temporal_detection.py  vjepa2_optimization.py
sowlv2/utils/: filesystem_utils.py  frame_utils.py  path_config.py  pipeline_utils.py  video_utils.py
tests/: conftest.py  test_requirements.txt
tests/integration/: test_edge_cases.py  test_optimizations.py  test_output_structure.py
tests/unit/: test_cli.py
tests/unit/utils/: test_filesystem_utils.py  test_path_config.py  test_video_utils.py
