[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sowlv2"
version = "0.2.0"
authors = [
    { name="Csaba Bolyos", email="bladeszasza@gmail.com" },
]
description = "SOWLv2: Text-prompted object segmentation using OWLv2 and SAM 2"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.13.0",
    "transformers>=4.32.1",
    "sam2>=1.1.0", # Check exact version needed after fixing bug
    "opencv-python>=4.5.5.64",
    "numpy>=1.21.0",
    "Pillow>=9.0.0",
    "pyyaml>=6.0",
    "huggingface_hub>=0.15.0"
]

[project.urls]
Homepage = "https://github.com/bladeszasza/SOWLv2"
Issues = "https://github.com/bladeszasza/SOWLv2/issues"

[project.scripts]
sowlv2-detect = "sowlv2.cli:main"
